--- a/src/styles/ProfileCard.css
+++ b/src/styles/ProfileCard.css
@@ -1,5 +1,4 @@
 .friends-cards {
-
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
@@ -8,6 +7,6 @@
 
     -webkit-flex-flow: row wrap;
     justify-content: space-around;
-    align-content: center;
     align-items: center;
+    height: 100%;
 }
