--- a/src/styles/ProfileCard.css
+++ b/src/styles/ProfileCard.css
@@ -6,6 +6,7 @@
     display: flex;
 
     -webkit-flex-flow: row wrap;
+    flex-flow: row wrap;
     justify-content: space-around;
     align-items: center;
     height: 100%;
